force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <description>Payment method</description>
    <label>Payment</label>
    <nameField>
        <label>Payement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>