force-app/main/default/objects/Payment__c/fields/Doner_Name__c.field-meta.xml
<CustomField>
    <fullName>Doner_Name__c</fullName>
    <label>Doner Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>