force-app/main/default/objects/Payment__c/fields/Facilitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Facilitor_Name__c</fullName>
    <label>Facilitor Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>