force-app/main/default/objects/Payment__c/fields/lead__c.field-meta.xml
<CustomField>
    <fullName>lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Payment</relationshipLabel>
    <relationshipName>Payment</relationshipName>
    <type>Lookup</type>
</CustomField>