force-app/main/default/objects/Payment__c/fields/Payment_method__c.field-meta.xml
<CustomField>
    <fullName>Payment_method__c</fullName>
    <label>Payment method</label>
    <length>20</length>
    <type>Text</type>
</CustomField>