force-app/main/default/objects/Payment__c/fields/TotalList__c.field-meta.xml
<CustomField>
    <fullName>TotalList__c</fullName>
    <label>TotalList</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>s1</fullName>
            </value>
            <value>
                <fullName>s2</fullName>
            </value>
            <value>
                <fullName>s3</fullName>
            </value>
            <value>
                <fullName>d1</fullName>
            </value>
            <value>
                <fullName>d2</fullName>
            </value>
            <value>
                <fullName>d3</fullName>
            </value>
            <value>
                <fullName>f1</fullName>
            </value>
            <value>
                <fullName>f2</fullName>
            </value>
            <value>
                <fullName>f3</fullName>
            </value>
            <value>
                <fullName>credit</fullName>
            </value>
            <value>
                <fullName>debit</fullName>
            </value>
            <value>
                <fullName>loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>