force-app/main/default/objects/Payment__c/recordTypes/donar.recordType-meta.xml
<RecordType>
    <fullName>donar</fullName>
    <active>true</active>
    <label>donar</label>
</RecordType>