force-app/main/default/objects/Payment__c/recordTypes/facilator.recordType-meta.xml
<RecordType>
    <fullName>facilator</fullName>
    <active>true</active>
    <label>facilator</label>
</RecordType>