force-app/main/default/objects/Payment__c/recordTypes/student.recordType-meta.xml
<RecordType>
    <fullName>student</fullName>
    <active>true</active>
    <label>student</label>
</RecordType>